--- a/views/add.ejs
+++ b/views/add.ejs
@@ -7,6 +7,7 @@
     <title>Add</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
+    <link rel="stylesheet" href="/path/to/bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" />
 </head>
 
 <body>
@@ -23,8 +24,8 @@
             </div>
         </div>
     </nav>
-    <div class="container mt-4">
-        <form class="row g-3 needs-validation was-validated" novalidate="">
+    <div class="container mt-5 ">
+        <form class="row g-3 needs-validation was-validated" novalidate="" method="post" action="/add">
             <div class="col-md-4 position-relative">
                 <label for="validationTooltip01" class="form-label">First name</label>
                 <input type="text" class="form-control" id="validationTooltip01" name="Fname" required="">
@@ -34,12 +35,18 @@
                 <input type="text" class="form-control" id="validationTooltip02" name="Rname" required="">
             </div>
             <div class="col-md-4 position-relative">
+                <label for="validationTooltipUsername" class="form-label">Date Of Birth</label>
+                <div class="input-group has-validation">
+                    <input type="date" id="datepicker" name="Date" class="form-control" id="validationTooltipUsername"
+                        required>
+                </div>
+            </div>
+            <div class="col-md-4 position-relative">
                 <label for="validationTooltipUsername" class="form-label">Email</label>
                 <div class="input-group has-validation">
                     <span class="input-group-text" id="validationTooltipUsernamePrepend">@</span>
                     <input type="email" class="form-control" id="validationTooltipUsername" name="email"
                         aria-describedby="validationTooltipUsernamePrepend">
-
                 </div>
             </div>
             <div class="col-md-4 position-relative">
@@ -51,32 +58,41 @@
 
                 </div>
             </div>
-            <div class="col-md-6 position-relative">
-                <label for="validationTooltip03" class="form-label">City</label>
-                <input type="text" class="form-control" id="validationTooltip03" required="">
-            </div>
-            <div class="col-md-3 position-relative">
-                <label for="validationTooltip04" class="form-label">State</label>
-                <select class="form-select" id="validationTooltip04" required="">
-                    <option selected="" disabled="" value="">Choose...</option>
-                    <option>...</option>
-                </select>
-                <div class="invalid-tooltip">
-                    Please select a valid state.
+            <div class="col-md-4 position-relative">
+                <label for="validationTooltipUsername" class="form-label">Church Name</label>
+                <div class="input-group has-validation">
+                    <input type="text" class="form-control" id="validationTooltipUsername" name="ChName"
+                        aria-describedby="validationTooltipUsernamePrepend" required>
                 </div>
             </div>
-            <div class="col-md-3 position-relative">
-                <label for="validationTooltip05" class="form-label">Zip</label>
-                <input type="text" class="form-control" id="validationTooltip05" required="">
+            <div class="col-md-4 position-relative">
+                <label for="validationTooltip03" class="form-label">City</label>
+                <input type="text" class="form-control" id="validationTooltip03" value="Hurgada" name="city"
+                    required="">
             </div>
-            <div class="col-12">
-                <button class="btn btn-primary" type="submit">Submit form</button>
+            <div class="col-md-4 position-relative">
+                <label for="validationTooltip03" class="form-label">Area</label>
+                <input type="text" class="form-control" id="validationTooltip03" required="" name="area">
+            </div>
+            <div class="col-md-4 position-relative">
+                <label for="validationTooltip03" class="form-label">Street</label>
+                <input type="text" class="form-control" id="validationTooltip03" required="" name="street">
+            </div>
+
+            <div class="col-12 mt-5">
+                <button class="btn btn-primary btn-lg" type="submit" style="width: 70%;margin-left: 15%;">Submit
+                    Form</button>
             </div>
         </form>
     </div>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"
+        integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
