--- a/views/add.ejs
+++ b/views/add.ejs
@@ -32,7 +32,7 @@
                 <div class="col-md-4 position-relative">
                     <label for="validationTooltipUsername" class="form-label">Date Of Birth</label>
                     <div class="input-group has-validation">
-                        <input type="date" id="datepicker" name="Date" class="form-control"
+                        <input type="date" id="datepicker" name="date" class="form-control"
                             id="validationTooltipUsername" required />
                     </div>
                 </div>
