added bootstrap and all crud operations

--- a/views/add.ejs
+++ b/views/add.ejs
@@ -75,7 +75,7 @@
                         minlength="3" />
                 </div>
 
-                <div class="col-12 mt-5">
+                <div class="col-12 my-5">
                     <button class="btn btn-primary btn-lg" type="submit" style="width: 70%; margin-left: 15%">
                         <span style="font-weight: bold; color: #00ff89; font-size: larger;">+</span> Add Person
                     </button>
