--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -7,8 +7,7 @@
     <title>
         <%= title %>
     </title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
 
     <link rel="icon"
         href="https://static.vecteezy.com/system/resources/previews/001/194/272/original/cross-in-church-png.png">
